# AI

./: .gitignore  README.md  Untitled.ipynb  async.py  pyproject.toml
ai/: constants.py  misc_utils.py  run_experiments.py  train.py
ai/datamodule/: text.py
ai/datamodules/: text.py
ai/diffusion/: models.py
ai/diffusion/score_models/: models.py
ai/diffusion/tiny_diffusion/: ddpm.py  positional_embeddings.py
ai/layers/: norm.py
ai/lightning_modules/: next_token.py
ai/models/nlp/: mlp.py  simple_lstm.py  test.py  transformer.py  transformer2.py  transformer_scratch.py  wavenet.py
ai/optimizers/: adam.py
ai/vqvae/: model.py
notebooks/: Untitled.ipynb  ai_transformer_model.pt  backprop3.ipynb  build_makemore_backprop_ninja.ipynb  codesig.ipynb  convs.ipynb  fast_attn.ipynb  next_token_preds.ipynb  optimizers.ipynb  practice backprop.ipynb  preds.ipynb  pytorch_transformer.ipynb  resumable_iterators.ipynb  seq2seq_torch.ipynb  transformer.ipynb  transformer_scratch.ipynb
notebooks/RAG/: links.txt  multi-agent.ipynb  twelve_labs.ipynb  wikipedia-QA.ipynb
notebooks/RNN/: rnn_numpy.ipynb  rnn_torch.ipynb
notebooks/VQVAE/: vqvae.ipynb
notebooks/asyncio/: Untitled.ipynb  asyncio.ipynb
notebooks/backprop/: backprop.ipynb  backprop2.ipynb  backprop4.ipynb  build_makemore_backprop_ninja.ipynb
notebooks/diffusion/: L1_Sampling.ipynb  sampling.ipynb  train.ipynb
notebooks/diffusion_dlai/: L1_Sampling.ipynb  L2_Training.ipynb  L3_Context.ipynb  L4_FastSampling.ipynb  train2.ipynb  train_mscoco.ipynb
notebooks/diffusion_math/: Untitled.ipynb  dev.ipynb  score model.ipynb  score_function_q.ipynb  score_model2.ipynb  tiny_diff.ipynb  tiny_diffusion.ipynb
notebooks/encoder_decoder/: baidu.ipynb  enc_dec_attention.ipynb  enc_dec_attn-Copy1.ipynb  enc_dec_attn.ipynb  encoder_decoder.ipynb  multi30k_enc_dec.ipynb  seq2seq_torch-Copy1.ipynb  seq2seq_v2.ipynb
notebooks/huggingface/: Lab_3_fine_tune_model_to_detoxify_summaries.ipynb  Untitled.ipynb  anthropic_prompting.ipynb  asyncio.ipynb  dev.ipynb  eval.ipynb  lora_token_classification.ipynb
notebooks/linalg/: gram_schmidt.ipynb  pca.ipynb
notebooks/stable_diff/: Untitled.ipynb
notebooks/transformers/: transformer.ipynb
tests/: test_models.py
(+7 files in other folders)
