[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["Erik Gafni <egafni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scipy = "^1.11.3"
numpy = "^1.26.2"
matplotlib = "^3.8.1"
#cupy-cuda11x = "^12.2.0"
torch = "^2"
pandas = "^2.1.3"
torchinfo = "^1.8.0"
pytorch-lightning = "^2.1.2"
tensorboard = "^2.15.1"
loguru = "^0.7.2"
optuna = "^3.4.0"
wandb = "^0.16.0"
transformers = "^4.35.2"
fsspec = "^2023.10.0"
configsys = "^0.1.0"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.8"
ipdb = "^0.13.13"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
