[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["Erik Gafni <egafni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scipy = "^1.11.3"
numpy = "^1.26.2"
matplotlib = "^3.8.1"
#cupy-cuda11x = "^12.2.0"
torch = "^2.2"
torchinfo = "^1.8.0"
pytorch-lightning = "^2.1.2"
tensorboard = "^2.15.1"
loguru = "^0.7.2"
optuna = "^3.4.0"
wandb = "^0.16.0"
transformers = "^4.35.2"
fsspec = "^2023.10.0"
configsys = "^0.1.0"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"
shutils = "^0.1.0"
anthropic = "^0.8.0"
torchvision = "^0.17"
peft = "^0.8.1"
datasets = "^2.16.1"
evaluate = "^0.4.1"
seqeval = "^1.2.2"
sacrebleu = "^2.4.0"
torchtext = "^0.17.0"
torchdata = "^0.7.1"
spacy = "^3.7.2"
einops = "^0.7.0"
llama-index = "^0.10.23"
llama-index-readers-web = "^0.1.7"
trafilatura = "^1.8.0"
llama-index-agent-openai-legacy = "^0.1.3"
llama-index-llms-openai = "^0.1.13"
llama-index-embeddings-openai = "^0.1.7"
jax = "^0.4.26"
optax = "^0.2.2"
score-models = {git = "https://github.com/ericmjl/score-models"}
equinox = "^0.11.3"
ipywidgets = "^8.1.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.8"
ipdb = "^0.13.13"
pytest = "^7.4.3"


[[tool.poetry.source]]
name = "jax-cuda"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.htm"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
